renamed variables, avoiding camelcase

--- a/lessons/thw-python/data-structures/data_structures.ipynb
+++ b/lessons/thw-python/data-structures/data_structures.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "data_structures"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,30 +31,30 @@
       "\n",
       "A list is an ordered, indexable collection of data. Lets say you have collected some current and voltage data that looks like this:\n",
       "\n",
-      "    voltage:\n",
-      "        -2.0\n",
-      "        -1.0\n",
-      "        0.0\n",
-      "        1.0\n",
-      "        2.0\n",
+      "    voltages:\n",
+      "    -2.0\n",
+      "    -1.0\n",
+      "     0.0\n",
+      "     1.0\n",
+      "     2.0\n",
       "\n",
-      "    current:\n",
-      "        -1.0\n",
-      "        -0.5\n",
-      "        0.0\n",
-      "        0.5\n",
-      "        1.0\n",
+      "    currents:\n",
+      "    -1.0\n",
+      "    -0.5\n",
+      "     0.0\n",
+      "     0.5\n",
+      "     1.0\n",
       "\n",
-      "So you could put that data into lists like:"
+      "So you could put that data into lists like"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage = [-2.0, -1.0, 0.0, 1.0, 2.0]\n",
+      "voltages = [-2.0, -1.0, 0.0, 1.0, 2.0]\n",
       "\n",
-      "current = [-1.0, -0.5, 0.0, 0.5, 1.0]"
+      "currents = [-1.0, -0.5, 0.0, 0.5, 1.0]"
      ],
      "language": "python",
      "metadata": {},
@@ -64,14 +64,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**voltage** is of type list:"
+      "**voltages** is of type list:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "type(voltage)"
+      "type(voltages)"
      ],
      "language": "python",
      "metadata": {},
@@ -81,14 +81,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Python lists have the feature that they are indexed from zero. Therefore, to find the value of the first item in voltage:"
+      "Python lists are indexed from zero.  Therefore, to find the value of the first item in `voltages`:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage[0]"
+      "voltages[0]"
      ],
      "language": "python",
      "metadata": {},
@@ -105,7 +105,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage[2]"
+      "voltages[2]"
      ],
      "language": "python",
      "metadata": {},
@@ -115,14 +115,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Lists can be indexed from the back using a negative index. The last item of current"
+      "Lists can be indexed from the back using a negative index. This expression gives us the last element of `currents`:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "current[-1]"
+      "currents[-1]"
      ],
      "language": "python",
      "metadata": {},
@@ -139,7 +139,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "current[-2]"
+      "currents[-2]"
      ],
      "language": "python",
      "metadata": {},
@@ -149,14 +149,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can \"slice\" items from within a list. Lets say we wanted the second through fourth items from voltage"
+      "You can \"slice\" items from within a list. Lets say we wanted the second through fourth items from `voltages`"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage[1:4]"
+      "voltages[1:4]"
      ],
      "language": "python",
      "metadata": {},
@@ -173,7 +173,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage[2:]"
+      "voltages[2:]"
      ],
      "language": "python",
      "metadata": {},
@@ -209,15 +209,15 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "One useful method is append. Lets say we want to stick the following data on the end of both our lists :\n",
+      "One useful method is append. Lets say we want to stick the following data on the end of both our lists.\n",
       "\n",
-      "    voltage:\n",
-      "        3.0\n",
-      "        4.0\n",
-      "        \n",
-      "    current:\n",
-      "        1.5\n",
-      "        2.0\n",
+      "    voltages:\n",
+      "     3.0\n",
+      "     4.0\n",
+      "\n",
+      "    currents:\n",
+      "     1.5\n",
+      "     2.0\n",
       "\n",
       "If you want to append items to the end of a list, use the append method."
      ]
@@ -226,7 +226,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage.append(3.0)"
+      "voltages.append(3.0)"
      ],
      "language": "python",
      "metadata": {},
@@ -236,7 +236,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage.append(4.0)"
+      "voltages.append(4.0)"
      ],
      "language": "python",
      "metadata": {},
@@ -246,7 +246,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "voltage"
+      "voltages"
      ],
      "language": "python",
      "metadata": {},
@@ -263,7 +263,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "current.extend([1.5, 2.0])"
+      "currents.extend([1.5, 2.0])"
      ],
      "language": "python",
      "metadata": {},
@@ -273,7 +273,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "current"
+      "currents"
      ],
      "language": "python",
      "metadata": {},
@@ -294,7 +294,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "len(voltage)"
+      "len(voltages)"
      ],
      "language": "python",
      "metadata": {},
@@ -315,7 +315,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data = [\"experiment: current vs. voltage\", \n",
+      "data_list = [\"experiment: current vs. voltage\", \n",
       "        \"run\", 47,\n",
       "        \"temperature\", 372.756, \n",
       "        \"current\", [-1.0, -0.5, 0.0, 0.5, 1.0], \n",
@@ -330,7 +330,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "print data"
+      "print data_list"
      ],
      "language": "python",
      "metadata": {},
@@ -340,7 +340,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We've got strings, ints, floats, and even other lists in there. The slashes are there so we can continue on the next line. They aren't necessary but they can sometimes make things look better."
+      "We've got strings, ints, floats, and even other lists in there. "
      ]
     },
     {
@@ -412,7 +412,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "tup = (\"red\", \"white\", \"blue\") "
+      "tup = (\"red\", \"white\", \"blue\")"
      ],
      "language": "python",
      "metadata": {},
@@ -472,15 +472,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "ou have to use a list to create a set.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "You have to use a list to create a set.\n",
       "\n",
       "Since sets contain only unique items, there's only one banana in the set fruit.\n",
-      "\n",
-      "\n",
       "\n",
       "You can do things like intersections, unions, etc. on sets just like in math. Here's an example of an intersection of two sets (the common items in both sets)."
      ]
@@ -545,11 +539,11 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data = {\"experiment\": \"current vs. voltage\",\n",
+      "data_dict = {\"experiment\": \"current vs. voltage\",\n",
       "        \"run\": 47,\n",
       "        \"temperature\": 372.756, \n",
-      "        \"current\": [-1.0, -0.5, 0.0, 0.5, 1.0], \n",
-      "        \"voltage\": [-2.0, -1.0, 0.0, 1.0, 2.0],\n",
+      "        \"currents\": [-1.0, -0.5, 0.0, 0.5, 1.0], \n",
+      "        \"voltages\": [-2.0, -1.0, 0.0, 1.0, 2.0],\n",
       "        }"
      ],
      "language": "python",
@@ -560,7 +554,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "print data"
+      "print data_dict"
      ],
      "language": "python",
      "metadata": {},
@@ -577,7 +571,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data[\"run\"]"
+      "data_dict[\"run\"]"
      ],
      "language": "python",
      "metadata": {},
@@ -594,7 +588,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data[\"voltage\"]"
+      "data_dict[\"voltages\"]"
      ],
      "language": "python",
      "metadata": {},
@@ -611,7 +605,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data[\"current\"][-1]"
+      "data_dict[\"current\"][-1]"
      ],
      "language": "python",
      "metadata": {},
@@ -628,7 +622,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data[\"temperature\"] = 3275.39"
+      "data_dict[\"temperature\"] = 3275.39"
      ],
      "language": "python",
      "metadata": {},
@@ -645,7 +639,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data[\"user\"] = \"Johann G. von Ulm\""
+      "data_dict[\"user\"] = \"Johann G. von Ulm\""
      ],
      "language": "python",
      "metadata": {},
@@ -662,7 +656,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data.keys()"
+      "data_dict.keys()"
      ],
      "language": "python",
      "metadata": {},
@@ -679,7 +673,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "data.values()"
+      "data_dict.values()"
      ],
      "language": "python",
      "metadata": {},
