added inline exercise with tests, light-handed change of variable names

--- a/lessons/thw-python/vars-types/variables.ipynb
+++ b/lessons/thw-python/vars-types/variables.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": ""
+  "name": "variables"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,7 +16,7 @@
       "\n",
       "* * * * *\n",
       "\n",
-      "**Based on Lecture Materials By: Milad Fatenejad, Katy Huff, Joshua R. Smith, Tommy Guy, Will Trimble, and Many More**"
+      "**Based on Lecture Materials By: Milad Fatenejad, Katy Huff, Joshua R. Smith, Tommy Guy, Will Trimble, and many more**"
      ]
     },
     {
@@ -25,7 +25,7 @@
      "source": [
       "## Introduction\n",
       "\n",
-      "This lecture is on basic programming in python. In order to do the examples, we are going to use an environment called IPython notebook.  I expect this lecture to be interactive, so stop me at any point if you have questions. The correct power dynamic is that people are the masters and the machines are servants. The computer is a hammer; it exists to help us get things done.  We can hammer nails with the handle, with the claw of the hammer; some of us even hammer nails with bricks.  But when you learn what part of the hammer works best with nails, and have some experience swinging it, you spend less time worrying about the hammering and more time worrying about your furniture."
+      "This lecture is on basic programming in python. In order to do the examples, we are going to use an environment called IPython Notebook.  I expect this lecture to be interactive, so stop me at any point if you have questions. The correct power dynamic is that people are the masters and the machines are servants. The computer is a hammer; it exists to help us get things done.  We can hammer nails with the handle, with the claw of the hammer; some of us even hammer nails with bricks.  But when you learn what part of the hammer works best with nails, and have some experience swinging it, you spend less time worrying about the hammering and more time worrying about your furniture."
      ]
     },
     {
@@ -35,41 +35,23 @@
       "So now would be a good time to roll out [PEP 20, The Zen of Python](http://www.python.org/dev/peps/pep-0020/)\n",
       "\n",
       "> Beautiful is better than ugly.  \n",
-      "\n",
       "> Explicit is better than implicit.  \n",
-      "\n",
       "> Simple is better than complex.  \n",
-      "\n",
       "> Complex is better than complicated.  \n",
-      "\n",
       "> Flat is better than nested.  \n",
-      "\n",
       "> Sparse is better than dense.  \n",
-      "\n",
       "> Readability counts.  \n",
-      "\n",
       "> Special cases aren't special enough to break the rules.  \n",
-      "\n",
       "> Although practicality beats purity.  \n",
-      "\n",
       "> Errors should never pass silently.  \n",
-      "\n",
       "> Unless explicitly silenced.  \n",
-      "\n",
       "> In the face of ambiguity, refuse the temptation to guess.  \n",
-      "\n",
       "> There should be one-- and preferably only one --obvious way to do it.  \n",
-      "\n",
       "> Although that way may not be obvious at first unless you're Dutch.  \n",
-      "\n",
       "> Now is better than never.   \n",
-      "\n",
       "> Although never is often better than *right* now.  \n",
-      "\n",
       "> If the implementation is hard to explain, it's a bad idea.  \n",
-      "\n",
       "> If the implementation is easy to explain, it may be a good idea.  \n",
-      "\n",
       "> Namespaces are one honking great idea -- let's do more of those!  "
      ]
     },
@@ -77,17 +59,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Here is the reference material.\n",
-      "\n",
-      "\n",
+      "Here are some links to tutorials and reference material.\n",
       "\n",
       "* [Dive into Python](http://www.diveintopython.net/toc/index.html)\n",
-      "\n",
       "* [Software Carpentry's Python Lectures](http://software-carpentry.org/4_0/python/)\n",
-      "\n",
       "* [IPython: A System for Interactive Scientific Computing](http://dx.doi.org/10.1109/MCSE.2007.53)\n",
-      "\n",
-      "* [How to Think Like a Computer Scientist](http://www.greenteapress.com/thinkpython/thinkpython.html)"
+      "* [How to Think Like a Computer Scientist](http://www.greenteapress.com/thinkpython/thinkpython.html)\n",
+      "* [Google's python class](https://developers.google.com/edu/python/)\n",
+      "* [The python documentation](http://docs.python.org/2.7/)"
      ]
     },
     {
@@ -98,19 +77,28 @@
       "\n",
       "You can run python commands in a handful of ways; you can create executable scripts, you can run the python interpreter, you can run IPython, or you can run IPython notebook.  IPython is an alternative to the built-in Python interpreter with some nice features.  IPython notebook gives you interactive access to the python interpreter from within a browser window, and it allows you to save your commands as a \"notebook\".\n",
       "\n",
-      "Let's give the built-in interpreter a spin just this once.  Open a **Terminal** window, which starts your default shell.  Type \n",
-      "\n",
-      "    python \n"
+      "Let's give the built-in interpreter a spin just this once.  Open a **Terminal** window, which starts your default shell.  Type "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "And you should see python start up.  Type \n",
-      "\n",
-      "    >>> print \"Fresh out of parrots\"\n",
-      "\n"
+      "    python "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "And you should see python start up.  Type "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    print \"Fresh out of parrots\""
      ]
     },
     {
@@ -121,10 +109,7 @@
       "\n",
       "Escape from python with \n",
       "\n",
-      " \n",
-      "\n",
-      "    >>> quit()\n",
-      "\n"
+      "    quit()"
      ]
     },
     {
@@ -135,7 +120,7 @@
       "\n",
       "\n",
       "\n",
-      "IPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interacitve, and you get there from the command line.  IPython notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
+      "IPython has more useful features for interactive use than the standard python interpreter, but it works in the same way--it is interacitve, and you get there from the command line.  IPython Notebook uses javascript to allow you to enter python commands in your browser and show you the result in the browser.  We'll use it from here on out."
      ]
     },
     {
@@ -152,7 +137,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Navigating in ipython notebook\n",
+      "## Navigating in IPython Notebook\n",
       "\n",
       "The box above is called the input cell; commands you put here will be fed to the python interpreter one at a time when you press **Shift-ENTER**.  \n",
       "\n",
@@ -176,7 +161,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you hit **ENTER** only, ipython notebook gives you another line in the current cell.  \n",
+      "If you hit **ENTER** only, IPython Notebook gives you another line in the current cell.  \n",
       "\n",
       "This allows you to compose multi-line commands and submit them to python all at once.  "
      ]
@@ -393,11 +378,7 @@
      "source": [
       "Note that the error message contains a recap of the input that caused the error (with an arrow, no less!)   It is objecting that **mystring** is not defined, since we just reset it.\n",
       "\n",
-      "\n",
-      "\n",
       "## Variables\n",
-      "\n",
-      "\n",
       "\n",
       "All programming languages have variables, and python is no different. To create a variable, just name it and set it with the equals sign. One important caveat: variable names can only contain letters, numbers, and the underscore character. Let's set a variable."
      ]
@@ -458,9 +439,9 @@
      "source": [
       "## Types and Dynamic Typing\n",
       "\n",
+      "Like most programming languages, things in python are typed. The type refers to the type of data. We've already defined three different types of data in experiment, voltage, and current. The types are string, integer, and float. You can inspect the type of a variable by using the `type` command.\n",
       "\n",
-      "\n",
-      "Like most programming languages, things in python are typed. The type refers to the type of data. We've already defined three different types of data in experiment, voltage, and current. The types are string, integer, and float. You can inspect the type of a variable by using the type command."
+      "Why should you care about data types?  In some cases, failing to pay attention to the data types will cause wrong answers."
      ]
     },
     {
@@ -593,6 +574,54 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Exercise\n",
+      "\n",
+      "Assign three variables, called versionnumber, numberofpythons, and thenumberten with the values 2, 5, and \"ten\" with the types float, int, and string respectively."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print versionnumber\n",
+      "print numberofpythons\n",
+      "print thenumberten"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Test your work.  Run the following three expressions."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print type(versionnumber) == float\n",
+      "print type(numberpfpythons) == int\n",
+      "print type(thenumberten) == str"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## Coersion\n",
       "\n",
       "It is possible to coerce (a fancy and slightly menacing way to say \"convert\") certain types of data to other types. For example, its pretty straightforward to coerce numerical data to strings."
@@ -689,7 +718,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "What would happen if you tried to coerce resistanceString to an int? What about coercing resistance to an int? Consider the following:"
+      "What would happen if you tried to coerce `resistance_string` to an int? What about coercing resistance to an int? Consider the following:"
      ]
     },
     {
@@ -707,14 +736,9 @@
      "metadata": {},
      "source": [
       "Do you think you can coerce that string to a numerical type?\n",
-      "\n",
       "## On Being Precise with floats and ints\n",
-      "\n",
       "Again, the following may seem esoteric and pedantic, but it is very important. So bear with me.\n",
-      "\n",
       "Let's say you had some voltage data that looks like the following\n",
-      "\n",
-      "\n",
       "\n",
       "    0\n",
       "    0.5\n",
@@ -1212,7 +1236,7 @@
       "\n",
       "\n",
       "\n",
-      "You can paste things into the ipython console by copying text from your machine with **ctrl+c** and typing **%paste** at the IPython prompt.  The **%paste** is necessary syntax for multi-line clipboard deposits."
+      "You can paste things into the IPython console by copying text from your machine with **ctrl+c** and typing **%paste** at the IPython prompt.  The **%paste** is necessary syntax for multi-line clipboard deposits."
      ]
     },
     {
