--- a/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
+++ b/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb
@@ -25,7 +25,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to encapsulate this similar code into a function or a method. Functions are based on mathematical functions which are used to reffer to a sequence of operations, often parameterized in some way - e.g. $f(x)$."
+      "Computers are very useful for doing the same operation over and over. When you know you will be performing the same operation many times, it is best to encapsulate this similar code into a function or a method.  Programming functions are related to mathematical functions, e.g. $f(x)$, and it is helpful to think of them as abstract operators that produce output given some input. Let's look at some examples to solidify this concept."
      ]
     },
     {
@@ -34,7 +34,7 @@
      "source": [
       "# Built-in string methods\n",
       "\n",
-      "The base distribution comes with many useful functions. When a function is a propety of, or owned by, on a specific type (ints, floats, lists, strings, dictionaries, etc.) it is called a method.  First let's look at some basic string methods since they are very useful for reading data into Python."
+      "The base distribution comes with many useful functions. When a function is a property of, or owned by, on a specific type (ints, floats, lists, strings, dictionaries, etc.) it is called a method.  First let's look at some basic string methods since they are very useful for reading data into Python."
      ]
     },
     {
@@ -157,7 +157,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, this often isn't very useful since we haven't returned any values from this file.  Note: that if you don't return anything from a function in Python, you implcitly have returned the special `None` singleton.  To return vaulues that you computed locally in the function body, use the **return** keyword.\n",
+      "However, this often isn't very useful since we haven't returned any values from this function.  Note: that if you don't return anything from a function in Python, you implcitly have returned the special `None` singleton.  To return vaulues that you computed locally in the function body, use the **return** keyword.\n",
       "\n",
       "    def <function name>():\n",
       "        <functiom body>\n",
@@ -210,7 +210,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Like mathematical funtions, you can compose a function with other functions or with itself!"
+      "Like mathematical functions, you can compose a function with other functions or with itself!"
      ]
     },
     {
@@ -227,7 +227,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Fucntions may be defined such that they have multiple arguments or multiple return values:\n",
+      "Functions may be defined such that they have multiple arguments or multiple return values:\n",
       "\n",
       "    def <function name>(<arg1>, <arg2>, ...):\n",
       "        <functiom body>\n",
@@ -283,7 +283,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Note that when you return multiple values you may unpack these into individual variables:"
+      "Note that when you return multiple values you may unpack these into individual variables or into a single variable which is a tuple of both values:"
      ]
     },
     {
@@ -292,7 +292,10 @@
      "input": [
       "q, r = quorem(42, 16)\n",
       "print q\n",
-      "print r"
+      "print r\n",
+      "\n",
+      "both = quorem(42, 16)\n",
+      "print both"
      ],
      "language": "python",
      "metadata": {},
@@ -304,7 +307,7 @@
      "source": [
       "## Keyword Arguments\n",
       "\n",
-      "In Python, functions also support options default values for arguments.  Arguments with an associated default are called **keyword arguments**.  If this function is then called without one of these arguments being pesent the default value is used.  All keyword arguments must come after normal arguments in the function definition:\n",
+      "In Python, functions also support default values for arguments.  Arguments with an associated default are called **keyword arguments**.  If this function is then called without one of these arguments being present the default value is used.  All keyword arguments must come after normal arguments in the function definition:\n",
       "\n",
       "    def <function name>(<arg1>, <arg2>, <arg3>=<arg3 default>, <arg4>=<arg4 default>, ...):\n",
       "        <function body>\n",
@@ -355,7 +358,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you have many keyword arguments, then they may be out of order in function call as long as they are explicit."
+      "If you have many keyword arguments, then they may be out of order in the function call as long as they are explicit."
      ]
     },
     {
@@ -383,7 +386,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**Warning:**  be careful with mutable containers and default values.  The value changes with every function call."
+      "**Warning:**  be careful with mutable containers as default values.  The container will remember its value from previous function calls."
      ]
     },
     {
@@ -490,7 +493,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Not just lists, but any sequence is allowed to be expanded in this way.  While this works for normal arguments, keyword arguments are more similar to dictionaries.  Therefore any mapping is also able to be expanded into keyword arguments.  To distingush keyword argument unpacking from upacking normal arguments, you must use a double asterisk `**` to unpack a dictionary."
+      "Not just lists, but any sequence is allowed to be expanded in this way.  While this works for normal arguments, keyword arguments are more similar to dictionaries.  Therefore any mapping is also able to be expanded into keyword arguments.  To distingush keyword argument unpacking from unpacking normal arguments, you must use a double asterisk `**` to unpack a dictionary."
      ]
     },
     {
@@ -519,9 +522,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This allow you to build up dictionaires of values with which to call function *before* calling that function.\n",
+      "This allows you to build up dictionaries of values with which to call function *before* calling it.\n",
       "\n",
-      "In addition to calling functions with lists or tuples and dicts, you may also define fucntions such that any extra arguments are put into a tuple and any extra keyword arguments are placed into a dictionary.  These special catch-all conatiners must come after all other arguments and all other keyword arguments.  This is known as argument packing and uses the single and double asterisk as above, but this time in the function definition:\n",
+      "In addition to calling functions with lists or tuples and dicts, you may also define functions such that any extra arguments are put into a tuple and any extra keyword arguments are placed into a dictionary.  These special catch-all containers must come after all other arguments and all other keyword arguments.  This is known as argument packing and uses the single and double asterisk as above, but this time in the function definition:\n",
       "\n",
       "    def <function name>(<arg1>, <arg2>=<arg2 default>, *<other args>, **<other keyword args>):\n",
       "        <function body>\n",
@@ -631,7 +634,7 @@
      "source": [
       "## Recursion\n",
       "\n",
-      "One of the greatest features of functions is that they may call themselves from withing their own bodies!  This is known as **recurssion**.  "
+      "One of the greatest features of functions is that they may call themselves from within their own bodies!  This is known as **recursion**. "
      ]
     },
     {
@@ -660,7 +663,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Well, that was too much.  Thus it is important to ensure that reccursive functions have some case which does not call itself.  This will terminate the recurrsion."
+      "Well, that was too much.  Thus it is important to ensure that recursive functions have some case which does not call itself.  This will terminate the recursion."
      ]
     },
     {
@@ -690,7 +693,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "One of the most famous recurssive sequences is the [Fibonacci sequence](http://en.wikipedia.org/wiki/Fibonacci_number).  This can be defined as a single recursive function."
+      "One of the most famous recursive sequences is the [Fibonacci sequence](http://en.wikipedia.org/wiki/Fibonacci_number).  This can be defined as a single recursive function."
      ]
     },
     {
@@ -777,7 +780,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This allows functions be passed other functions as arguments:"
+      "This allows functions be passed to other functions as arguments:"
      ]
     },
     {
@@ -807,7 +810,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def outter():\n",
+      "def outer():\n",
       "    def inner(*args, **kwargs):\n",
       "        return True\n",
       "    return inner"
@@ -820,7 +823,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "outter()"
+      "outer()"
      ],
      "language": "python",
      "metadata": {},
@@ -867,7 +870,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Most of the time such functions amy be used such that the original function name is preserved."
+      "Most of the time such functions may be used such that the original function name is preserved."
      ]
     },
     {
@@ -909,6 +912,13 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more advanced users, the standard library `functools` module has some really powerful and great utilities.  This includes the [functools.wraps()](http://docs.python.org/2/library/functools.html#functools.wraps) function."
+     ]
     },
     {
      "cell_type": "markdown",
@@ -961,7 +971,7 @@
      "metadata": {},
      "source": [
       "## Short exercise: Write a function to calculate GC content of DNA\n",
-      "Make a function that calculate the GC content of a given DNA sequence. For the more advanced participants, make your function able to handle sequences of mixed case (see the third test case)."
+      "Make a function that calculates the GC content of a given DNA sequence. For the more advanced participants, make your function able to handle sequences of mixed case (see the third test case)."
      ]
     },
     {
