--- a/lessons/thw-documentation/tutorial.ipynb
+++ b/lessons/thw-documentation/tutorial.ipynb
@@ -363,7 +363,7 @@
       "\n",
       "Automatic documentation is the powerful concept that the comments and\n",
       "docstrings that the developer has already written can be scraped from\n",
-      "the code base and placed on a website or into a user's guide. This\n",
+      "the code base and placed on a website or into API documentation. This\n",
       "significantly reduces the overhead of having to write and maintain may\n",
       "documents which contain effectively the same information.\n",
       "\n",
