updated debugging tutorial.

--- a/lessons/thw-python-debugging/tutorial.ipynb
+++ b/lessons/thw-python-debugging/tutorial.ipynb
@@ -57,9 +57,9 @@
       "## Debugging Basics: Exceptions, Errors, and Tracebacks\n",
       "\n",
       "When your code errors, Python will stop and return an *exception* that attempts \n",
-      "to tell you what's up. There are approximately 165 exceptions in the Python standard \n",
-      "library, and you'll be seeing many of them very soon. Exceptions to know\n",
-      "include:\n",
+      "to tell you what's up. There are approximately [165 exceptions in the Python standard \n",
+      "library](http://docs.python.org/2/library/exceptions.html), and you'll be seeing many \n",
+      "of them very soon. Exceptions to know include:\n",
       "\n",
       "    SyntaxError # You're probably missing a parenthesis or colon\n",
       "    NameError   # There's probably a variable name typo somewhere\n",
@@ -250,6 +250,9 @@
       " * `print <variable>` prints the current value of a specified variable\n",
       " * `list` shows the source code around the `set_trace()` line\n",
       " * `args` prints the values of all the arguments in the current function\n",
+      " * `where` prints the curent stack trace with the current function at the bottom\n",
+      " * `up` move up the stack trace by one frame to the calling function\n",
+      " * `down` move down the stack track by one frame to the called function\n",
       "\n",
       "There are a lot more options, which can be found [here](http://docs.python.org/2/library/pdb.html), \n",
       "but these few should be enough to get you running with pdb."
