made some minor updates

--- a/lessons/thw-testing/tutorial.ipynb
+++ b/lessons/thw-testing/tutorial.ipynb
@@ -72,7 +72,8 @@
       "\n",
       "*Validation* is the process of asking, \"Have we built the right\n",
       "software?\" That is, is the code designed in such a way as to produce the\n",
-      "answers we are interested in, data we want, etc."
+      "answers we are interested in, data we want, etc.  Did we implement\n",
+      "the right physical models or algorithms to achieve our scientific goal?"
      ]
     },
     {
