Another version of the code

--- a/lessons/swc-python/python-09-cmdline.ipynb
+++ b/lessons/swc-python/python-09-cmdline.ipynb
@@ -2002,6 +2002,294 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "A More Advanced Solution"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "One of the rules in the [previous lesson](python-08-numpy.ipynb) was,\n",
+      "\"If you're writing a loop, you're probably doing it wrong.\"\n",
+      "Let's take a look at how we could eliminate most of the loops in our density calculator using NumPy arrays\n",
+      "and another feature of Python we haven't encountered yet:\n",
+      "[list comprehensions](glossary.html#list_comprehension).\n",
+      "Suppose we have a list of numbers:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "nums = [2, 5, 9]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Instead of writing a loop to create a list of their squares,\n",
+      "we can do this:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "squares = [x ** 2 for x in nums]\n",
+      "print squares"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[4, 25, 81]\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This doesn't change our original list:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print nums"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[2, 5, 9]\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "and the name of the temporary variable inside the comprehension doesn't matter:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print [something_else ** 2 for something_else in nums]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[4, 25, 81]\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Used sparingly,\n",
+      "list comprehensions make a lot of programs more readable&mdash;just compare\n",
+      "the list comprehension form of this calculation with the loop-and-conditional form:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from math import sqrt\n",
+      "signal = [-0.7, -0.3, -0.1, 0.2, 0.3, 0.5]\n",
+      "\n",
+      "# The easy way\n",
+      "pos_roots = [sqrt(s) for s in signal if s >= 0]\n",
+      "\n",
+      "# The hard way\n",
+      "pos_roots = []\n",
+      "for s in signal:\n",
+      "    if s >= 0:\n",
+      "        pos_roots.append(sqrt(s))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's use this and NumPy to clean up our `count` function.\n",
+      "After a bit of tweaking, we get:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def count(source):\n",
+      "    if type(source) is str:\n",
+      "        reader = open(source, 'r')\n",
+      "    else:\n",
+      "        reader = source\n",
+      "    cells = np.array([list(x.strip()) for x in reader.readlines()], np.int32)\n",
+      "    if reader is not source:\n",
+      "        reader.close()\n",
+      "    return cells.shape[1], cells.sum(1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's go through this line by line:\n",
+      "\n",
+      "*   The function takes a single argument `source`, which can be either an open file (e.g., `sys.stdin`) or a string containing a filename.\n",
+      "*   If `source` is a string, we open that file and assign the resulting file handle to `reader`.\n",
+      "*   Otherwise, we just assign the open file handle to `reader`, so that no matter how the function was called, we can read from `reader`.\n",
+      "*   Line 6 then converts the file into a NumPy array:\n",
+      "    *   `reader.readlines()` reads all of the lines of the file into a list of strings.\n",
+      "    *   The list comprehension `[x.strip() for x in reader.readlines()]` would strip off the end-of-line characters from those strings...\n",
+      "    *   ...but we use `list(x.strip())` instead of just `x.strip()` to turn the characters in each row (like `'10010'`) into a list (like `['1', '0', '0', '1', '0']`)...\n",
+      "    *   ...so that we wind up with a list of lists, where each sublist is a row of our data.\n",
+      "    *   We then use `np.array` to turn this list of lists into a NumPy array.\n",
+      "*   If the call to `count` passed in a string, and we opened the file ourselves, we need to close `reader`.\n",
+      "*   Finally, we return what we originally returned: the width of the data, and the sums of filled cells across each row."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can use these tricks in `process` as well:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def process(title, filenames):\n",
+      "    if filenames is None:\n",
+      "        width, filled = count(sys.stdin)\n",
+      "        display(title, filled, width)\n",
+      "    else:\n",
+      "        results = [count(f) for f in filenames]\n",
+      "        width, filled = results[0]\n",
+      "        assert all([r[0] == width for r in results]), 'File widths unequal'\n",
+      "        for a in results[1:]:\n",
+      "            filled += a[1]\n",
+      "        display(title, filled, len(filenames) * width)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "*   If no filenames are given, we use `count` to count filled cells from standard input and display the result as before.\n",
+      "*   Otherwise, we use a list comprehension to call `count` for all the filenames in a single statement.  Since `count` returns two values, this list comprehension will create a list of pairs.  The first element of each pair will be the width of that data file, and the second will be its counts.\n",
+      "*   We then check that all the widths are the same by comparing the first element of each pair to the width of the first data set, and use Python's built-in `all` function to check that all of the values in the resulting list of Booleans are true.\n",
+      "*   Lines 9-10 add the vectors of counts for files 1 to N to the counts for file 0.  (Doing this without a loop is left as an exercise for the reader.)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Is the final version of the program better than the one before it?\n",
+      "It isn't much shorter&mdash;we've only cut 8 lines out of 59:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!wc fracdens_7.py fracdens_8.py"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "      59     185    1690 fracdens_7.py\r\n",
+        "      51     161    1463 fracdens_8.py\r\n",
+        "     110     346    3153 total\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The new program isn't noticeably faster than the old one either,\n",
+      "since the time to do the calculations is dwarfed by\n",
+      "the time needed to read the data into the program.\n",
+      "\n",
+      "In practice,\n",
+      "the answer to the question, \"Is it better?\"\n",
+      "is another question: \"For whom?\"\n",
+      "Programmers who know Python well,\n",
+      "and who are used to thinking in terms of applying operations to entire data sets at once,\n",
+      "would probably have written something like the final version right from the start.\n",
+      "Programmers who aren't that familiar with Python's features,\n",
+      "on the other hand,\n",
+      "would probably find the loop-based version easier to understand\n",
+      "because it spells out the steps the program is taking,\n",
+      "rather than the results it's producing.\n",
+      "\n",
+      "These differences highlight one of the fundamental problems in programming\n",
+      "(and indeed in any other activity that requires expertise):\n",
+      "things that are comprehensible to a novice are painfully slow for an expert to read,\n",
+      "while things that are natural for an expert are often opaque to novices.\n",
+      "This doesn't mean that either is right or wrong:\n",
+      "it's just one manifestation of the cognitive changes that occur\n",
+      "as a task goes from being a mystery to being possible to being easy.\n",
+      "\n",
+      "The same thing is true of documentation:\n",
+      "a tutorial aimed at novices can be infuriating for experts to read,\n",
+      "since the information they want is scattered so thinly,\n",
+      "while a manual page for experts can seem like gibberish to people\n",
+      "who don't yet have a mental model of the domain."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "Key Points"
      ]
     },
